# sdmf-official

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
files_dev/: config.ini  master_specs.xlsx
files_dev/outbound/: results_002fe23095a348de9de7d8fe1604e768_20260208_1770550370.xlsx  results_1358580905f94677a5e0948bc52c3e32_20260208_1770546511.xlsx  results_1cdabb3683bd4445bb4fc13ff1f75dbb_20260208_1770546657.xlsx  results_61f047bfbe834caf884fc4b5962fc6f3_20260208_1770550196.xlsx  results_dd95435ce41c4c3d9fbf946ce0590d96_20260208_1770549962.xlsx
files_prod/: config.ini  master_specs.xlsx
src/handuflow/: __init__.py
src/handuflow/cli/: main.py  main2.py
src/handuflow/config/: LoggingConfig.py
src/handuflow/data_flow_diagram_generator/: DataFlowDiagramGenerator.py
src/handuflow/data_movement_controller/: BaseLoadStrategy.py  DataLoadController.py  LoadDispatcher.py
src/handuflow/data_movement_controller/load_types/: APIExtractor.py  AppendLoad.py  FullLoad.py  IncrementalCDC.py  SCDType2.py  StorageFetch.py
src/handuflow/data_quality/executors/: ComprehensiveDQExecutor.py
src/handuflow/data_quality/runner/: FeedDataQualityRunner.py
src/handuflow/exception/: DataLoadException.py  DataQualityException.py  ExtractionException.py  ResultGenerationException.py  StorageFetchException.py  SystemError.py  ValidationError.py
src/handuflow/orchestrator/: Orchestrator.py
src/handuflow/result_generator/: ResultGenerator.py
src/handuflow/system_cleanup/: SystemCleanup.py
src/handuflow/validation/: SystemLaunchValidator.py  ValidationContext.py  ValidationResult.py  ValidationRule.py  Validator.py
src/handuflow/validation/validation_rules/: ColumnExistsInSelection.py  CompositeKeysCheck.py  ComprehensiveChecksDependencyDatasetCheck.py  EnforceMasterSpecsStructure.py  EnforceStandardChecks.py  PartitionKeysCheck.py  PrimaryKey.py  StandardCheckStructureCheck.py  VacuumHoursCheck.py  ValidateFeedSpecsJSON.py  ValidateMasterSpecs.py
src/sdmf/cli/: main2.py
src/sdmf/config/: LoggingConfig.py
src/sdmf/data_movement_framework/: BaseLoadStrategy.py
src/sdmf/data_movement_framework/load_types/: APIExtractor.py
src/sdmf/orchestrator/: Orchestrator.py
tests/: test.py
