[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdmf"
version = "0.1.13"
description = "SDMF - Standard Data Management Framework"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Harsh Handoo", email = "handoo.harsh@gmail.com" }
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

dependencies = [
  "pandas",
  "openpyxl",
  "matplotlib",
  "delta-spark",
  "numpy",
  "requests"
]

[project.urls]
Homepage = "https://github.com/hhandoo/sdmf-official"
Repository = "https://github.com/hhandoo/sdmf-official"
Documentation = "https://github.com/hhandoo/sdmf-official#readme"
Changelog = "https://github.com/hhandoo/sdmf-official/blob/main/CHANGELOG.md"
Issues = "https://github.com/hhandoo/sdmf-official/issues"
License = "https://github.com/hhandoo/sdmf-official/blob/main/LICENSE"


[tool.setuptools.packages.find]
where = ["src"]
