[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handuflow"
version = "0.1.18"
description = "handuflow - Reliable data movement and evolution at scale"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Harsh Handoo", email = "handoo.harsh@gmail.com" }
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

dependencies = [
  "pandas",
  "openpyxl",
  "matplotlib",
  "delta-spark",
  "numpy",
  "requests"
]

[project.urls]
Homepage = "https://github.com/hhandoo/handuflow"
Repository = "https://github.com/hhandoo/handuflow"
Documentation = "https://github.com/hhandoo/handuflow#readme"
Changelog = "https://github.com/hhandoo/handuflow/blob/main/CHANGELOG.md"
Issues = "https://github.com/hhandoo/handuflow/issues"
License = "https://github.com/hhandoo/handuflow/blob/main/LICENSE"


[tool.setuptools.packages.find]
where = ["src"]
